# tls

./: MultivariateLogNormal.ipynb  README.md  model_fitting.ipynb  python_basic_exam_01.ipynb
CMakeVersionByGit/: CMakeLists.txt
CMakeVersionByGit/cmake/modules/: GetGitRevision.cmake  version.c.in
CMakeVersionByGit/include/: version.h
CMakeVersionByGit/src/: main.c
python/: GeoPy.ipynb  pandas_dataframe.ipynb  pandas_df.ipynb
